openbve (1.0.6.2-0ubuntu1) unreleased; urgency=low

  * New upstream version (1.0.6.2)
  * Update 'debian/known-issues.txt'
  * Update 'openbve-data' Depends: >= 1.0.6.0+dfsg
  * Drop try..catch around saving of logs (should be handled by
    separate patch applied by upstream.

 -- Paul Sladen <ubuntu@paul.sladen.org>  Fri, 29 May 2009 15:12:03 +0000
	
openbve (1.0.6.0-0ubuntu1) unreleased; urgency=low

  * New upstream version (1.0.6.0)
  * Make dropping out of full-screen *very* first priority
  * Update changelog.html (1.0.6.0) and releasenotes.html (1.0.5.0)
  * Update known-issues.txt

 -- Paul Sladen <ubuntu@paul.sladen.org>  Thu, 28 May 2009 06:53:10 +0000
	
openbve (1.0.2.0-0ubuntu2) jaunty; urgency=low

  * Explicitly depend on 'libmono-i18n2.0-cil' (LP: #356487)
  * Backport homepage update to 'http://openbve.trainsimcentral.co.uk/'
  + and fix packaging to reflect
  * Expand debian/copyright based on feedback for acceptance into Debian

 -- Paul Sladen <ubuntu@paul.sladen.org>  Wed, 15 Apr 2009 02:56:20 +0000

openbve (1.0.2.0-0ubuntu1) jaunty; urgency=low

  * New upstream version (bugfix release) (LP: #356344)
  * debian/rules: tweak to allow easy building of Debug or Release target
  * pass '/fhs' from the mono wrapper instead of hardcoding
  * overload GetSettingsFolder() to create the config directory before return it
  * Load first-use Keyboard mapping from GetDataFolder("Controls") not ~/
  * Default first-use game data from /usr/share/games/bve/{Railway/Route,Train}
  * Update 'openbve-data' Depends: >= 1.0.2.0+dfsg
  * Load timetables relative to route directory, not trainpath
  + disable spurious Train folder warning, as existance is not required later
  * Don't display hidden .files and .folders in ListViews
  * Include 'changelog.html' and 'releasenotes.html' downloaded from the website
  * Fix case in manpage documentation for '~/.config/OpenBve/'
  * Add README.Debian covering Debian-centric patches
  * Update 'known-issues.txt'