@@ -45,6 +45,21 @@
 <table><tr style="height: 4px;"><td /></tr></table>
 <br /><table><tr style="height: 4px;"><td /></tr></table>
 <table><tr><td bgcolor="#808080" height="24" style="background-image:url(common/gradient_24.png)">
+<font color="#FFFFFF">&nbsp;v1.0.6.2 (2009-05-28)&nbsp;</font>
+</td></tr></table>
+<table><tr style="height: 4px;"><td /></tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><b>Bugfix:</b> Fog did not show the correct color in some cases since 1.0.6.0. The interpolation to a no-fog condition has been made smoother and consistent. The route parser reports fog-related ill-conditions now.</td>
+</tr></table>
+<table cellspacing="0"><tr>
+<td valign="top">●</td>
+<td>&nbsp;</td>
+<td><b>Bugfix:</b> The in-game clock did not wrap after 23:59:59 and showed 24:00:00 instead of the desired 00:00:00, for example.</td>
+</tr></table>
+<br /><table><tr style="height: 4px;"><td /></tr></table>
+<table><tr><td bgcolor="#808080" height="24" style="background-image:url(common/gradient_24.png)">
 <font color="#FFFFFF">&nbsp;v1.0.6.0 (2009-05-24)&nbsp;</font>
 </td></tr></table>
 <table><tr style="height: 4px;"><td /></tr></table>
@@ -56,7 +71,7 @@
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
 <td>&nbsp;</td>
-<td><b>Simulation:</b> The A.I. now takes a bit less time trying to stop smoothly at stations.</td>
+<td><b>Simulation:</b> The A.I. now takes a bit less time trying to stop accurately at stations.</td>
 </tr></table>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
@@ -101,7 +116,7 @@
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
 <td>&nbsp;</td>
-<td>Passenger-related door lock is now simulated. This is based on the <em>PassengerRatio</em> parameter in the <em>Track.Sta</em> command, and more probable to occur on crowded trains.</td>
+<td>Passenger-related door lock is now simulated. This is based on the <em>PassengerRatio</em> parameter in the <em>Track.Sta</em> command, and is more probable to occur on crowded trains.</td>
 </tr></table>
 <table cellspacing="0"><tr>
 <td valign="top">●</td>
