@@ -5,6 +5,7 @@ openbve (1.0.6.2-0ubuntu1) unreleased; urgency=low
   * Update 'openbve-data' Depends: >= 1.0.6.0+dfsg
   * Drop try..catch around saving of logs (should be handled by
     separate patch applied by upstream.
+  * Update changelog.html (1.0.6.2)
 
  -- Paul Sladen <ubuntu@paul.sladen.org>  Fri, 29 May 2009 15:12:03 +0000
 	
